manifest/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatzure-app
  namespace: cristhoper # Cambiado para que coincida con el namespace del Secret
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatzure-app
  template:
    metadata:
      labels:
        app: chatzure-app
    spec:
      containers:
      - name: chatzure-backend
        image: cris2003/gpt:latest
        ports:
        - containerPort: 8085
      - name: chatzure-frontend
        image: cris2003/chatzurefr:latest
        ports:
        - containerPort: 4200
